--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -8,3 +8,7 @@ $color-black: #000000;
 $color-blackened: #353535;
 $color-smoked: #eaeaea;
 $color-whitened: #f6f6f6;
+
+// Les paddings //
+
+$padding50: 50px;
