--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,3 +12,9 @@ $color-whitened: #f6f6f6;
 // Les paddings //
 
 $padding50: 50px;
+
+// Les bordures //
+
+$border45: 42px;
+$borderTopRounded : 45px 45px 0 0;
+$borderBotRounded : 0 0 45px 45px;
