--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
-body {
+body, p, h2, h3 {
   font-family: "Roboto", sans-serif, Verdana, Arial, Helvetica, sans-serif;
 }
 
-h1, h3 {
+h1 {
   font-family: "Shrikhand", cursive, Impact, Arial, Helvetica, Verdana;
 }
 
@@ -164,6 +164,42 @@ header {
   padding: 50px;
   padding-bottom: 200px;
   background-color: #f6f6f6;
+}
+
+.picture {
+  width: 100px;
+}
+
+.gal {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.card {
+  width: 100%;
+  height: 600px;
+  border-radius: 42px;
+  background-color: blue;
+}
+
+.card__pic {
+  height: 400px;
+}
+.card__pic .picture {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+.card__pic .picture--roundedTop {
+  border-radius: 42px 42px 0 0;
+}
+
+.card__text {
+  height: 200px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
 }
 
 footer {
