--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,26 @@
-body, p, h2, h3 {
+body, p, h2, h4 {
   font-family: "Roboto", sans-serif, Verdana, Arial, Helvetica, sans-serif;
-}
-
-h1 {
-  font-family: "Shrikhand", cursive, Impact, Arial, Helvetica, Verdana;
-}
-
-h3 {
-  font-size: 52px;
-  color: white;
-  padding: 50px;
 }
 
 h2 {
   font-size: 72px;
   font-weight: bold;
   margin-bottom: 50px;
+}
+
+h4 {
+  font-size: 52px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+h1, h3 {
+  font-family: "Shrikhand", cursive, Impact, Arial, Helvetica, Verdana;
+}
+
+h3 {
+  font-size: 52px;
+  color: #ffffff;
 }
 
 p {
@@ -28,11 +33,16 @@ ul {
   color: white;
 }
 
+a {
+  text-decoration: none;
+  color: #000000;
+}
+
 ul li a {
   color: white;
   text-decoration: none;
-  line-height: 50px;
-  font-size: 24px;
+  line-height: 65px;
+  font-size: 36px;
 }
 
 header {
@@ -162,7 +172,7 @@ header {
 
 #restaurants {
   padding: 50px;
-  padding-bottom: 200px;
+  padding-bottom: 125px;
   background-color: #f6f6f6;
 }
 
@@ -179,8 +189,27 @@ header {
 .card {
   width: 100%;
   height: 600px;
-  border-radius: 42px;
-  background-color: blue;
+  border-radius: 45px;
+  background-color: #ffffff;
+  box-shadow: 0 10px 50px 0 rgba(53, 53, 53, 0.2);
+  margin-bottom: 50px;
+}
+
+.new {
+  width: 230px;
+  height: 75px;
+  margin: 25px 0 0 600px;
+  border-radius: 8px;
+  background-color: #99E2D0;
+  position: absolute;
+}
+.new p.new--font {
+  display: flex;
+  justify-content: center;
+  font-size: 38px;
+  font-weight: bold;
+  color: #008d62;
+  margin: 15px 0 0 0;
 }
 
 .card__pic {
@@ -190,9 +219,16 @@ header {
   width: 100%;
   height: 400px;
   object-fit: cover;
+  object-position: bottom;
+}
+.card__pic .picture--center {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  object-position: center;
 }
 .card__pic .picture--roundedTop {
-  border-radius: 42px 42px 0 0;
+  border-radius: 45px 45px 0 0;
 }
 
 .card__text {
@@ -200,6 +236,20 @@ header {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
+}
+.card__text .text--column {
+  width: 90%;
+  padding: 50px 0 0 30px;
+}
+.card__text .icn-favorite {
+  width: 10%;
+  padding: 50px;
+  justify-content: center;
+  opacity: 0.7;
+}
+
+p.place-restaurant {
+  color: rgba(53, 53, 53, 0.8);
 }
 
 footer {
