--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,23 +1,29 @@
 @import "./utils/variables";
+@import "./utils/mixins";
 
-body, p, h2, h3{
+body, p, h2, h4{
     font-family: 'Roboto', sans-serif, Verdana, Arial, Helvetica, sans-serif;
-}
-
-h1{
-    font-family: 'Shrikhand', cursive, Impact, Arial, Helvetica, Verdana;
-}
-
-h3{
-    font-size: 52px;
-    color: white;
-    padding: 50px;
 }
 
 h2{
     font-size: 72px;
     font-weight: bold;
     margin-bottom: 50px;
+}
+
+h4{
+    font-size: 52px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+h1, h3{
+    font-family: 'Shrikhand', cursive, Impact, Arial, Helvetica, Verdana;
+}
+
+h3{
+    font-size: 52px;
+    color: $color-white;
 }
 
 p{
@@ -30,11 +36,16 @@ ul{
     color: white;
 }
 
+a{
+    text-decoration: none;
+    color: $color-black;
+}
+
 ul li a{
     color: white;
     text-decoration: none;
-    line-height: 50px;
-    font-size: 24px;
+    line-height: 65px;
+    font-size: 36px;
 }
 
 header{
@@ -178,7 +189,7 @@ header{
 
 #restaurants{
     padding: $padding50;
-    padding-bottom: 200px;
+    padding-bottom: 125px;
     background-color: $color-whitened;
 }
 
@@ -196,7 +207,26 @@ header{
     width : 100%;
     height: 600px;
     border-radius: $border45;
-    background-color: blue;
+    background-color: $color-white;
+    box-shadow: 0 10px 50px 0 rgb($color-blackened, 0.2);
+    margin-bottom: 50px;
+}
+
+.new{
+    width: 230px;
+    height: 75px;
+    margin: 25px 0 0 600px;
+    border-radius: 8px;
+    background-color: $color-tertiary;
+    position: absolute;
+    p.new--font{
+        display: flex;
+        justify-content: center;
+        font-size: 38px;
+        font-weight: bold;
+        color: #008d62;
+        margin: 15px 0 0 0;
+    }
 }
 
 .card__pic{
@@ -205,6 +235,14 @@ header{
         width: 100%;
         height: 400px;
         object-fit: cover;
+        object-position: bottom;
+    }
+
+    .picture--center{
+        width: 100%;
+        height: 400px;
+        object-fit: cover;
+        object-position: center;
     }
 
     .picture--roundedTop{
@@ -217,6 +255,20 @@ header{
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    .text--column{
+        width: 90%;
+        padding: 50px 0 0 30px;
+    }
+    .icn-favorite{
+        width: 10%;
+        padding: $padding50;
+        justify-content: center;
+        opacity: 0.7;
+    }
+}
+
+p.place-restaurant{
+    color: rgb($color-blackened, 0.8);
 }
 
 footer{
