--- a/sass/main.scss
+++ b/sass/main.scss
@@ -271,6 +271,14 @@ p.place-restaurant{
     color: rgb($color-blackened, 0.8);
 }
 
+.photo__profil{
+    width: 100%;
+}
+
+.name__restaurant{
+    font-size: 78px;
+}
+
 footer{
     padding: $padding50;
     background-color: $color-blackened;
