Clean archi 7.1 - Suppr des font-sizing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,285 +1,14 @@
 @import "./utils/variables";
 @import "./utils/mixins";
 
-body, p, h2, h4{
-    font-family: 'Roboto', sans-serif, Verdana, Arial, Helvetica, sans-serif;
-}
+@import "./base/typography";
 
-h2{
-    font-size: 72px;
-    font-weight: bold;
-    margin-bottom: 50px;
-}
+@import "./layout/header";
 
-h4{
-    font-size: 52px;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
+@import "./composants/section";
+@import "./composants/buttonExplore";
+@import "./composants/sticker";
+@import "./composants/search";
+@import "./composants/card";
 
-h1, h3{
-    font-family: 'Shrikhand', cursive, Impact, Arial, Helvetica, Verdana;
-}
-
-h3{
-    font-size: 52px;
-    color: $color-white;
-}
-
-p{
-    font-size: 44px;
-    margin-bottom: 50px;
-}
-
-ul{
-    margin: 25px 0;
-    color: white;
-}
-
-a{
-    text-decoration: none;
-    color: $color-black;
-}
-
-ul li a{
-    color: white;
-    text-decoration: none;
-    line-height: 65px;
-    font-size: 36px;
-}
-
-header{
-    width: 100%;
-    padding: 30px 0;
-    display: flex;
-    justify-content: center;
-    background-color: $color-white;
-    box-shadow: 0 0 10px 0 $color-blackened;
-}
-
-#search{
-    padding: 0;
-    height: 100px;
-    background-color: $color-smoked;
-
-    .search__place{
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
-    }
-}
-
-
-#reserve{
-    padding: $padding50 + 50;
-    margin-bottom: 100px;
-    background-color: $color-whitened;
-}
-
-.reservation{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-
-    p{
-        color: $color-blackened;
-    }
-
-    button p{
-        color: $color-white;
-    }
-}
-
-
-.btn__explore{
-    background-color: $color-primary;
-    border-radius: 25px $color-primary;
-    width: 75%;
-}
-
-.btn--rouned{
-    border-radius: 100px;
-}
-
-#fonction{
-    padding: $padding50;
-    margin-bottom: 100px;
-    background-color: $color-white;
-}
-
-.fonctionnement{
-    display: flex;
-    flex-direction: column;
-}
-
-.pannel{
-    display: flex;
-    flex-direction: column;
-    padding: 25px;
-
-    .sticker{
-        display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
-        height: 200px;
-        margin-bottom: 100px;
-        border-radius: 60px;
-        box-shadow: 0 10px 50px 0 rgb($color-blackened, 0.3);
-    }
-
-    .sticker--backGrey{
-        background-color: $color-whitened;
-    }
-
-    .sticker--backPurple{
-        background-color: rgb($color-primary, 0.1);
-    }
-
-    .sticker--circle{
-        width: 80px;
-        height: 80px;
-        position: relative;
-        left: -40px;
-        background-color: $color-primary;
-        border-radius: 50px;
-        display: flex;
-
-        .sticker--nbr{
-            position: relative;
-            top: 20px; left: 27px;
-            color: $color-white;
-            margin: 0;
-        }
-    }
-
-    .sticker__icon{
-        width: 80px;
-        height: 80px;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin: 0 25px 0 -25px;
-
-        .icon--stylized{
-            color: $color-blackened;
-            opacity: .5;
-        }
-
-        .icon--stylizedPurple{
-            color: $color-primary;
-        }
-    }
-
-    .sticker__text{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-
-        .text--sizing{
-            margin: 0;
-            font-weight: bold;
-            text-align: center;
-        }
-    }
-}
-
-#restaurants{
-    padding: $padding50;
-    padding-bottom: 125px;
-    background-color: $color-whitened;
-}
-
-.picture{
-    width: 100px;
-}
-
-.gal{
-    width: 100%;
-    display: flex;
-    flex-flow: column nowrap;
-}
-
-.card{
-    width : 100%;
-    height: 600px;
-    border-radius: $border45;
-    background-color: $color-white;
-    box-shadow: 0 10px 50px 0 rgb($color-blackened, 0.2);
-    margin-bottom: 50px;
-}
-
-.new{
-    width: 230px;
-    height: 75px;
-    margin: 25px 0 0 600px;
-    border-radius: 8px;
-    background-color: $color-tertiary;
-    position: absolute;
-    p.new--font{
-        display: flex;
-        justify-content: center;
-        font-size: 38px;
-        font-weight: bold;
-        color: #008d62;
-        margin: 15px 0 0 0;
-    }
-}
-
-.card__pic{
-    height: 400px;
-    .picture{
-        width: 100%;
-        height: 400px;
-        object-fit: cover;
-        object-position: bottom;
-    }
-
-    .picture--center{
-        width: 100%;
-        height: 400px;
-        object-fit: cover;
-        object-position: center;
-    }
-
-    .picture--roundedTop{
-        border-radius: $border45 $border45 0 0;
-    }
-}
-
-.card__text{
-    height: 200px;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    .text--column{
-        width: 90%;
-        padding: 50px 0 0 30px;
-    }
-    .icn-favorite{
-        width: 10%;
-        padding: $padding50;
-        justify-content: center;
-        opacity: 0.7;
-    }
-}
-
-p.place-restaurant{
-    color: rgb($color-blackened, 0.8);
-}
-
-.photo__profil{
-    width: 100%;
-}
-
-.name__restaurant{
-    font-size: 78px;
-}
-
-footer{
-    padding: $padding50;
-    background-color: $color-blackened;
-}
+@import "./layout/footer";
