--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,29 +2,25 @@ body, p, h2, h4 {
   font-family: "Roboto", sans-serif, Verdana, Arial, Helvetica, sans-serif;
 }
 
+h1, h3 {
+  font-family: "Shrikhand", cursive, Impact, Arial, Helvetica, Verdana;
+}
+
 h2 {
-  font-size: 72px;
   font-weight: bold;
   margin-bottom: 50px;
 }
 
 h4 {
-  font-size: 52px;
   font-weight: bold;
   margin-bottom: 20px;
 }
 
-h1, h3 {
-  font-family: "Shrikhand", cursive, Impact, Arial, Helvetica, Verdana;
-}
-
 h3 {
-  font-size: 52px;
   color: #ffffff;
 }
 
 p {
-  font-size: 44px;
   margin-bottom: 50px;
 }
 
@@ -41,8 +37,6 @@ a {
 ul li a {
   color: white;
   text-decoration: none;
-  line-height: 65px;
-  font-size: 36px;
 }
 
 header {
@@ -54,21 +48,25 @@ header {
   box-shadow: 0 0 10px 0 #353535;
 }
 
-#search {
-  padding: 0;
-  height: 100px;
-  background-color: #eaeaea;
+#fonction {
+  padding: 50px;
+  margin-bottom: 100px;
+  background-color: #ffffff;
 }
-#search .search__place {
-  width: 100%;
-  height: 100%;
+
+.fonctionnement {
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
+  flex-direction: column;
+}
+
+#restaurants {
+  padding: 50px;
+  padding-bottom: 100px;
+  background-color: #f6f6f6;
 }
 
 #reserve {
-  padding: 100px;
+  padding: 50px;
   margin-bottom: 100px;
   background-color: #f6f6f6;
 }
@@ -95,17 +93,6 @@ header {
 
 .btn--rouned {
   border-radius: 100px;
-}
-
-#fonction {
-  padding: 50px;
-  margin-bottom: 100px;
-  background-color: #ffffff;
-}
-
-.fonctionnement {
-  display: flex;
-  flex-direction: column;
 }
 
 .pannel {
@@ -170,20 +157,28 @@ header {
   text-align: center;
 }
 
-#restaurants {
-  padding: 50px;
-  padding-bottom: 125px;
-  background-color: #f6f6f6;
+#search {
+  padding: 0;
+  height: 100px;
+  background-color: #eaeaea;
 }
-
-.picture {
-  width: 100px;
+#search .search__place {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .gal {
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
+}
+
+.picture {
+  width: 100px;
 }
 
 .card {
@@ -206,7 +201,6 @@ header {
 .new p.new--font {
   display: flex;
   justify-content: center;
-  font-size: 38px;
   font-weight: bold;
   color: #008d62;
   margin: 15px 0 0 0;
@@ -254,10 +248,6 @@ p.place-restaurant {
 
 .photo__profil {
   width: 100%;
-}
-
-.name__restaurant {
-  font-size: 78px;
 }
 
 footer {
