--- a/sass/composants/_section.scss
+++ b/sass/composants/_section.scss
@@ -1,6 +1,5 @@
 #fonction{
     padding: $padding50;
-    margin-bottom: 100px;
     background-color: $color-white;
 }
 
@@ -11,13 +10,11 @@
 
 #restaurants{
     padding: $padding50;
-    padding-bottom: 100px;
     background-color: $color-whitened;
 }
 
 #reserve{
-    padding: $padding50;
-    margin-bottom: 100px;
+    padding: 100px 130px 100px;
     background-color: $color-whitened;
 }
 
