--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,8 +1,10 @@
 header {
     width: 100%;
-    padding: 30px 0;
+    height: 120px;
+    padding: 15px 0;
     display: flex;
     justify-content: center;
-    background-color: #ffffff;
-    box-shadow: 0 0 10px 0 #353535;
+    align-items: center;
+    background-color: $color-white;
+    box-shadow: 0 0 15px 0 #838383;
   }
