--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,13 +84,11 @@ input {
   text-align: left;
   font-size: 40px;
   font-weight: bold;
+  padding: 0 0 0 25px;
 }
 
-#search .search__place {
-  width: 100%;
-  height: 100%;
+form {
   display: flex;
-  flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
 }
