--- a/sass/composants/_search.scss
+++ b/sass/composants/_search.scss
@@ -7,16 +7,11 @@ input{
     text-align: left;
     font-size: 40px;
     font-weight: bold;
+    padding: 0 0 0 25px;
     }
 
-#search{
-
-    .search__place{
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
-        align-items: center;
-    }
+form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
