--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,5 @@
 @import "./composants/search";
 @import "./composants/iconStyles";
 @import "./composants/buttonExplore";
+@import "./composants/sticker";
+@import "./composants/card";
