--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,5 @@
 @import "./composants/buttonExplore";
 @import "./composants/sticker";
 @import "./composants/card";
+
+@import "./layout/footer";
