--- a/sass/composants/_buttonExplore.scss
+++ b/sass/composants/_buttonExplore.scss
@@ -1,4 +1,4 @@
-button{
+.btn--gradiant{
     border: none;
     background: transparent;
     font-size: 40px;
@@ -15,9 +15,9 @@ button{
     content:"";
     width: 750px;
     height: 750px;
-    background: linear-gradient(-180deg, $color-tertiary 0%, $color-secondary 50%, $color-primary 100%);
+    background: linear-gradient(-180deg, #00febe 0%, $color-secondary 50%, $color-primary 100%);
     position: absolute;
-    top:-500px; left:-80px;
+    top:-475px; left:-80px;
     z-index: -1;
     transition: all .5s;
 }
