--- a/sass/composants/_sticker.scss
+++ b/sass/composants/_sticker.scss
@@ -2,8 +2,6 @@
     display: flex;
     flex-direction: column;
     padding: 25px;
-    margin-top: 40px;
-    
     .sticker{
         display: flex;
         flex-flow: row nowrap;
@@ -17,9 +15,13 @@
     .sticker--backGrey{
         background-color: $color-whitened;
     }
-    
-    :hover{
+    .sticker:hover{
         background-color: rgb($color-primary, 0.1);
+        color: $color-primary;
+        .icon--stylized{
+            color: $color-primary;
+            opacity: 1;
+        }
     }
     
     .sticker--circle{
@@ -30,7 +32,6 @@
         background-color: $color-primary;
         border-radius: 50px;
         display: flex;
-    
         .sticker--nbr{
             position: relative;
             top: 20px; left: 27px;
@@ -45,23 +46,18 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        margin: 0 25px 0 -25px;
-    
+        margin: 0 50px 0 20px;
+        color: $color-primary;
         .icon--stylized{
             color: $color-blackened;
             opacity: .5;
         }
-    
-        .icon--stylizedPurple{
-            color: $color-primary;
-        }
     }
-    
+
     .sticker__text{
         display: flex;
         justify-content: space-around;
         align-items: center;
-    
         .text--sizing{
             margin: 0;
             font-weight: bold;
