--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,26 @@
 footer{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
     padding: $padding50;
     background-color: $color-blackened;
+    h3{
+        font-size: 56px;
+    }
+    ul{
+        padding: 0;
+    }
+    li{
+        list-style-type: none;
+    }
+    a{
+        text-decoration: none;
+        font-size: 40px;
+        color: white;
+        line-height: 70px;
+        i{
+            width: 50px;
+            height: 50px;
+        }
+    }
 }
