--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-body, p {
+body {
   font-family: "Roboto", sans-serif, Verdana, Arial, Helvetica, sans-serif;
 }
 
@@ -13,7 +13,8 @@ body, p {
 
 h1 {
   font-family: "Shrikhand", cursive, Impact, Arial, Helvetica, Verdana;
-  color: #ffffff;
+  color: black;
+  font-size: 68px;
 }
 
 h2 {
@@ -22,8 +23,18 @@ h2 {
   margin: 0;
 }
 
+h4 {
+  font-size: 40px;
+  font-weight: bold;
+}
+
 p {
   font-size: 40px;
+  color: #353535;
+}
+
+a {
+  text-decoration: none;
   color: #353535;
 }
 
@@ -36,6 +47,13 @@ header {
   align-items: center;
   background-color: #ffffff;
   box-shadow: 0 0 15px 0 #838383;
+  position: relative;
+}
+
+.arrow--position {
+  position: absolute;
+  left: 100px;
+  top: 40px;
 }
 
 body {
@@ -53,6 +71,19 @@ body {
 .box--offset h2 {
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+.box--rounded {
+  border-top-left-radius: 125px;
+  border-top-right-radius: 125px;
+}
+
+.box--color {
+  background-color: #eaeaea;
+}
+
+.box--position {
+  transform: translate(0, -175px);
 }
 
 .fonctionnement {
@@ -76,6 +107,23 @@ body {
 }
 .reservation button p {
   color: #ffffff;
+}
+
+.name {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px 0 0;
+}
+
+section.command {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+section.command button {
+  padding: 30px 100px;
+  margin: 50px 0 150px 0;
 }
 
 input {
@@ -266,10 +314,14 @@ button:hover {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
+  line-height: 60px;
 }
 .card__text .text--column {
   width: 90%;
-  padding: 50px 0 0 30px;
+  padding: 30px;
+}
+.card__text .text--column h4 {
+  margin: 0;
 }
 .card__text .icn-favorite {
   width: 10%;
@@ -279,6 +331,7 @@ button:hover {
 }
 
 p.place-restaurant {
+  margin: 0;
   color: rgba(53, 53, 53, 0.8);
 }
 
