--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,4 +1,4 @@
-body, p{
+body{
     font-family: 'Roboto', sans-serif, Verdana, Arial, Helvetica, sans-serif;
 }
 
@@ -13,7 +13,8 @@ body, p{
 
 h1{
     font-family: 'Shrikhand', cursive, Impact, Arial, Helvetica, Verdana;
-    color: $color-white;
+    color: black;
+    font-size: 68px;
 }
 
 h2{
@@ -22,7 +23,17 @@ h2{
     margin: 0;
 }
 
+h4{
+    font-size: 40px;
+    font-weight: bold;
+}
+
 p{
     font-size: 40px;
+    color: $color-blackened;
+}
+
+a{  
+    text-decoration: none;
     color: $color-blackened;
 }
