--- a/sass/composants/_section.scss
+++ b/sass/composants/_section.scss
@@ -11,6 +11,19 @@
     }
 }
 
+.box--rounded{
+    border-top-left-radius: 125px;
+    border-top-right-radius: 125px;
+}
+
+.box--color{
+    background-color: $color-smoked;
+}
+
+.box--position{
+    transform: translate(0, -175px);
+}
+
 .fonctionnement{
     display: flex;
     flex-direction: column;
@@ -33,5 +46,22 @@
 
     button p{
         color: $color-white;
+    }
+}
+
+.name{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 50px 0 0;
+}
+
+section.command{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    button{
+        padding: 30px 100px;
+        margin: 50px 0 150px 0;
     }
 }
