--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,4 +7,10 @@ header {
     align-items: center;
     background-color: $color-white;
     box-shadow: 0 0 15px 0 #838383;
+    position: relative;
+  }
+
+  .arrow--position{
+    position: absolute;
+    left: 100px; top: 40px;
   }
