--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,5 +12,6 @@
 @import "./composants/buttonExplore";
 @import "./composants/sticker";
 @import "./composants/card";
+@import "./composants/plates";
 
 @import "./layout/footer";
