--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,9 +33,41 @@ p {
   color: #353535;
 }
 
+.fonts--margin {
+  margin: 15px 0;
+}
+
+.fonts--size {
+  font-size: 45px;
+}
+
+.fonts--weight {
+  font-weight: 400;
+  color: #353535;
+  margin: 12px 0;
+}
+
+.fonts--bold {
+  font-weight: 700;
+  color: #353535;
+  margin: 12px 0;
+}
+
 a {
   text-decoration: none;
   color: #353535;
+}
+
+.menu--fonts {
+  font-size: 45px;
+  font-weight: 400;
+  color: #353535;
+}
+
+.menu--under {
+  width: 13%;
+  line-height: 100px;
+  border-bottom: 8px solid #99E2D0;
 }
 
 header {
@@ -83,7 +115,7 @@ body {
 }
 
 .box--position {
-  transform: translate(0, -175px);
+  transform: translate(0, -155px);
 }
 
 .fonctionnement {
@@ -337,6 +369,37 @@ p.place-restaurant {
 
 .photo__profil {
   width: 100%;
+}
+
+.menu-pannel {
+  display: flex;
+  flex-direction: column;
+}
+
+.plate {
+  display: flex;
+  height: 150px;
+  padding: 25px;
+  margin-bottom: 50px;
+  border-radius: 60px;
+  background-color: white;
+  box-shadow: 0 5px 25px 0 rgba(53, 53, 53, 0.2);
+  cursor: pointer;
+}
+.plate .plate-details {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+
+.plate__txt {
+  overflow: hidden;
+}
+
+.price--align {
+  margin-top: 80px;
+  margin-right: 40px;
 }
 
 footer {
