--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -33,7 +33,39 @@ p{
     color: $color-blackened;
 }
 
+.fonts--margin{
+    margin: 15px 0;
+}
+
+.fonts--size{
+    font-size: 45px;
+}
+
+.fonts--weight{
+    font-weight: 400;
+    color: $color-blackened;
+    margin: 12px 0;
+}
+
+.fonts--bold{
+    font-weight: 700;
+    color: $color-blackened;
+    margin: 12px 0;
+}
+
 a{  
     text-decoration: none;
     color: $color-blackened;
+}
+
+.menu--fonts{
+    font-size: 45px;
+    font-weight: 400;
+    color: $color-blackened;
+}
+
+.menu--under{
+    width: 13%;
+    line-height: 100px;
+    border-bottom: 8px solid $color-tertiary;
 }
