--- a/sass/composants/_section.scss
+++ b/sass/composants/_section.scss
@@ -21,7 +21,7 @@
 }
 
 .box--position{
-    transform: translate(0, -175px);
+    transform: translate(0, -155px);
 }
 
 .fonctionnement{
@@ -54,6 +54,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 50px 0 0;
+}
+
+#menu{
 }
 
 section.command{
