--- a/sass/composants/_buttonExplore.scss
+++ b/sass/composants/_buttonExplore.scss
@@ -1,6 +1,6 @@
 .btn--gradiant{
     border: none;
-    background: transparent;
+    background: linear-gradient(180deg, #FF79DA 0%, #9356DC 85%);
     font-size: 40px;
     color: $color-white;
     position: relative;
