--- a/sass/composants/_card.scss
+++ b/sass/composants/_card.scss
@@ -15,15 +15,18 @@
     background-color: $color-white;
     box-shadow: 0 10px 50px 0 rgb($color-blackened, 0.2);
     margin-bottom: 50px;
+    &:hover{
+        transform: scale(1.1); 
+    }
 }
 
 .new{
     width: 230px;
     height: 75px;
-    margin: 25px 0 0 600px;
     border-radius: 8px;
     background-color: $color-tertiary;
     position: absolute;
+    top: 30px; right: 30px;
     p.new--font{
         display: flex;
         justify-content: center;
@@ -35,6 +38,7 @@
 
 .card__pic{
     height: 400px;
+    position: relative;
     .picture{
         width: 100%;
         height: 400px;
