--- a/sass/composants/_search.scss
+++ b/sass/composants/_search.scss
@@ -15,3 +15,8 @@ form{
     justify-content: center;
     align-items: center;
 }
+
+#search{
+    box-shadow: inset 1px 4px 9px -6px rgb(0 0 0 / 40%); 
+    background-color: #E9E9E9; 
+}
