--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -22,5 +22,8 @@ footer{
             width: 50px;
             height: 50px;
         }
+        &:hover{
+            color: #9356DC;
+        }
     }
 }
