--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./layout/header";
 
 @import "./layout/body";
+@import "./composants/loader";
 @import "./composants/section";
 @import "./composants/search";
 @import "./composants/iconStyles";
@@ -13,5 +14,6 @@
 @import "./composants/sticker";
 @import "./composants/card";
 @import "./composants/plates";
+@import "./composants/favoriteHeart";
 
 @import "./layout/footer";
