--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,6 +92,83 @@ body {
   background-color: #eaeaea;
 }
 
+.loader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 0;
+  background-color: #353535;
+  position: absolute;
+  z-index: 1;
+}
+.loader .loader-welcome {
+  font-family: "Shrikhand", cursive, Impact, Arial, Helvetica, Verdana;
+  color: white;
+  font-size: 44px;
+}
+.loader .lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.loader .lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: #fff;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.loader .lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.loader .lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.loader .lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.loader .lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
+}
+.loader .loader--fondu {
+  opacity: 0;
+  transition: opacity 0.6s ease-out;
+}
+
 #reserve {
   padding: 100px 130px 100px;
   background-color: #F6F6F6;
@@ -371,7 +448,6 @@ button:hover {
   width: 10%;
   padding: 50px;
   justify-content: center;
-  opacity: 0.7;
 }
 
 p.place-restaurant {
@@ -412,6 +488,18 @@ p.place-restaurant {
 .price--align {
   margin-top: 80px;
   margin-right: 40px;
+}
+
+.fav-heart--color {
+  color: rgba(53, 53, 53, 0.8);
+}
+
+.fav-heart--background {
+  background-color: radial-gradient(#FF79DA, #9356DC);
+  transition: all 4s;
+}
+.fav-heart--background:hover {
+  background-color: radial-gradient(#FF79DA, #9356DC);
 }
 
 footer {
