--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,18 +93,19 @@ body {
 }
 
 .loader {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
   align-items: center;
-  padding: 25px 0;
+  justify-content: center;
   background-color: #353535;
-  position: absolute;
   z-index: 1;
+  transition: opacity 0.75sec, visibility 0.75sec;
 }
-.loader .loader-welcome {
+.loader .loader-typo {
   font-family: "Shrikhand", cursive, Impact, Arial, Helvetica, Verdana;
   color: white;
   font-size: 44px;
@@ -164,9 +165,10 @@ body {
     transform: translate(24px, 0);
   }
 }
-.loader .loader--fondu {
+
+.loader--hide {
   opacity: 0;
-  transition: opacity 0.6s ease-out;
+  visibility: hidden;
 }
 
 #reserve {
