--- a/sass/composants/_loader.scss
+++ b/sass/composants/_loader.scss
@@ -1,20 +1,19 @@
 .loader{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    padding: 25px 0;
-    background-color: $color-blackened;
-    position: absolute;
-    z-index: 1;
-    .loader-welcome{
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $color-blackened;
+  z-index: 1;
+  transition: opacity 0.75sec, visibility 0.75sec;
+    .loader-typo{
         font-family: 'Shrikhand', cursive, Impact, Arial, Helvetica, Verdana;
         color:white;
         font-size: 44px;
     }
-
 
     .lds-ellipsis {
         display: inline-block;
@@ -71,8 +70,9 @@
           transform: translate(24px, 0);
         }
       }
-    .loader--fondu{
-        opacity: 0;
-        transition: opacity 0.6s ease-out;
-    }
+}
+
+.loader--hide{
+  opacity:0;
+  visibility: hidden;
 }
