--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,24 +99,37 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: #353535;
   z-index: 1;
-  transition: opacity 0.75sec, visibility 0.75sec;
+  opacity: 0;
+  animation: fadeout 2.75s 0s 1;
 }
-.loader .loader-typo {
+@keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.loader-typo {
   font-family: "Shrikhand", cursive, Impact, Arial, Helvetica, Verdana;
   color: white;
-  font-size: 44px;
+  font-size: 72px;
 }
-.loader .lds-ellipsis {
+
+.lds-ellipsis {
   display: inline-block;
   position: relative;
   width: 80px;
   height: 80px;
 }
-.loader .lds-ellipsis div {
+
+.lds-ellipsis div {
   position: absolute;
   top: 33px;
   width: 13px;
@@ -125,22 +138,27 @@ body {
   background: #fff;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
-.loader .lds-ellipsis div:nth-child(1) {
+
+.lds-ellipsis div:nth-child(1) {
   left: 8px;
   animation: lds-ellipsis1 0.6s infinite;
 }
-.loader .lds-ellipsis div:nth-child(2) {
+
+.lds-ellipsis div:nth-child(2) {
   left: 8px;
   animation: lds-ellipsis2 0.6s infinite;
 }
-.loader .lds-ellipsis div:nth-child(3) {
+
+.lds-ellipsis div:nth-child(3) {
   left: 32px;
   animation: lds-ellipsis2 0.6s infinite;
 }
-.loader .lds-ellipsis div:nth-child(4) {
+
+.lds-ellipsis div:nth-child(4) {
   left: 56px;
   animation: lds-ellipsis3 0.6s infinite;
 }
+
 @keyframes lds-ellipsis1 {
   0% {
     transform: scale(0);
@@ -165,12 +183,6 @@ body {
     transform: translate(24px, 0);
   }
 }
-
-.loader--hide {
-  opacity: 0;
-  visibility: hidden;
-}
-
 #reserve {
   padding: 100px 130px 100px;
   background-color: #F6F6F6;
