--- a/sass/composants/_loader.scss
+++ b/sass/composants/_loader.scss
@@ -4,16 +4,30 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: $color-blackened;
   z-index: 1;
-  transition: opacity 0.75sec, visibility 0.75sec;
-    .loader-typo{
-        font-family: 'Shrikhand', cursive, Impact, Arial, Helvetica, Verdana;
-        color:white;
-        font-size: 44px;
+  opacity: 0;
+  animation: fadeout  2.75s 0s 1;
+
+  @keyframes fadeout {
+      from {
+        opacity: 1;
+      }
+      to {
+        opacity: 0;
     }
+  }
+}
+
+.loader-typo{
+  font-family: 'Shrikhand', cursive, Impact, Arial, Helvetica, Verdana;
+  color:white;
+  font-size: 72px;
+}
+
 
     .lds-ellipsis {
         display: inline-block;
@@ -70,9 +84,3 @@
           transform: translate(24px, 0);
         }
       }
-}
-
-.loader--hide{
-  opacity:0;
-  visibility: hidden;
-}
